--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,11 @@
       <artifactId>jdbi3-core</artifactId>
       <version>3.34.0</version>
     </dependency>
-
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <version>1.14</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>Petshop-website-final</finalName>
