--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,11 @@
             <version>2.14.1</version>
         </dependency>
         <dependency>
+            <groupId>com.restfb</groupId>
+            <artifactId>restfb</artifactId>
+            <version>2023.4.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
             <version>2.14.1</version>
